<?xml version="1.0"?>
<package>
  <name>phantomx_gazebo</name>
  <version>0.1.0</version>
  <description>Provides Gazebo plugins to expose phantomx model to ROS</description>


  <maintainer email="pc@humarobotics.com">Philippe Capdepuy</maintainer>


  <license>BSD</license>
  <url type="website">http://wiki.ros.org/darwin_gazebo</url>


  <author email="pc@humarobotics.com">Philippe Capdepuy</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <run_depend>gazebo_ros</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>phantomx_description</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>


</package>